# arrow-flight-sample

./: README.md  pyproject.toml
arrow_flight/simple_flight_server/: client.py  sample.csv  server.py
