[tool.poetry]
name = "arrow-flight"
version = "0.1.0"
description = ""
authors = ["Oscar <oscar.garcia@damavis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^17.0.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
